Add img directory and summary for recipe

--- a/recipes/honey-garlic-salmon.html
+++ b/recipes/honey-garlic-salmon.html
@@ -6,7 +6,16 @@
   </head>
 
   <body>
-    <h1>Honey Garlic Salmon</h1>
     <a href="../index.html">Back</a>
+    <h1>Honey Garlic Salmon</h1>
+    <img src="../img/honey-garlic-salmon.jpg" alt="honey-garlic-salmon" width="300">
+
+    
+    <h2>Description</h2>
+    <p>Just imagine it: perfectly cooked salmon fillets coated in a glossy honey garlic glaze. Every bite is bursting with flavor! The honey and garlic sauce keeps the salmon juicy, moist, and packed with deliciousness—and it’s <strong>healthy</strong>, too!</p>
+
+    <p>
+      This <strong>quick salmon dinner</strong> is one of the fastest meals you can make at home. From prep to plate, it’s done <strong>in just 15 minutes</strong>. It’s proof that you don’t need anything fancy to make amazing food—sometimes, the simplest ingredients create the most incredible meals.
+    </p>
   </body>
 </html>
