Add Ingredients list to salmon recipe

--- a/recipes/honey-garlic-salmon.html
+++ b/recipes/honey-garlic-salmon.html
@@ -17,5 +17,22 @@
     <p>
       This <strong>quick salmon dinner</strong> is one of the fastest meals you can make at home. From prep to plate, it’s done <strong>in just 15 minutes</strong>. It’s proof that you don’t need anything fancy to make amazing food—sometimes, the simplest ingredients create the most incredible meals.
     </p>
+
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Salmon</li>
+      <li>Cayenne Pepper</li>
+      <li>Black Pepper</li>
+      <li>Parsley</li>
+      <li>Salt</li>
+      <li>Water</li>
+      <li>Olive Oil</li>
+      <li>Apple Cider Vinegar</li>
+      <li>Garlic</li>
+      <li>Honey</li>
+      <li>Lemon</li>
+    </ul>
+
   </body>
 </html>
