Add Steps section to salmon recipe

--- a/recipes/honey-garlic-salmon.html
+++ b/recipes/honey-garlic-salmon.html
@@ -34,5 +34,15 @@
       <li>Lemon</li>
     </ul>
 
+
+    <h2>Steps</h2>
+    <ol>
+      <li>Season the salmon with salt, black pepper and cayenne pepper, then set it aside for now.</li>
+      <li>In a bowl, mix together the honey, water, apple cider vinegar (or lemon juice), and a pinch of salt. Give it a good stir until it’s all combined.</li>
+      <li>Grab an oven-safe skillet (cast iron is perfect!) and heat it up on high. Add some olive oil, then put the salmon in, skin side down, and let it cook for about a minute. Flip it over, cook the other side for another minute, then flip it back so the skin side is down again.</li>
+      <li>Toss some garlic into the pan and let it sauté until it’s just starting to brown. Pour in the honey mixture and add some lemon wedges, then let the sauce simmer down until it’s sticky and glossy.</li>
+      <li>If you want a little extra char, stick the skillet under the broiler for about a minute—that’s totally optional.</li>
+      <li>Finish it off with a sprinkle of parsley on top and serve it up right away. So good!</li>
+    </ol>
   </body>
 </html>
