Complete gyoza recipe and add link list to index

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -7,24 +7,42 @@
 
   <body>
     <a href="../index.html">Back</a>
-    <h1></h1>
-    <img src="../img/" alt="">
+    <h1>Gyoza Recipe</h1>
+    <img src="../img/gyoza.jpg" alt="Gyoza" width="300">
 
     <h2>Description</h2>
-    <p></p>
+    <p>Gyoza is a type of Japanese dumplings, with juicy meat filling inside of dumpling wrappers.Originating from Chinese jiaozi dumplings, they have become a mainstay of Japanese recipes. It’s very popular in and outside of Japan.</p>
 
-    <p></p>
+    <p>In the United States, you can find them at Japanese restaurants and Asian-themed restaurants. They are often served as an appetizer, or part of a combo meal or in a bento box. For an extra burst of umami, consider adding a shoyu egg alongside your gyoza.</p>
 
 
     <h2>Ingredients</h2>
     <ul>
-      <li></li>
+      <li>Gyoza wrapper, store-bought</li>
+      <li>Oil</li>
+      <li>Water</li>
+      <li>Ground pork</li>
+      <li>Cabbage</li>
+      <li>Ginger</li>
+      <li>Garlic</li>
+      <li>Soy Sauce</li>
+      <li>Sake</li>
+      <li>White Pepper</li>
+      <li>Sesame oil</li>
+      <li>Chopped Scallion</li>
+      <li>Salt</li>
+      <li>Japanese Ponzu</li>
     </ul>
 
 
     <h2>Steps</h2>
     <ol>
-      <li></li>
+      <li>In a bowl, combine all the ingredients in the Filling and blend well. The Filling should be sticky and cohesive.</li>
+      <li>To make Gyoza Sauce, combine the Ponzu with the sesame oil in a small dipping bowl. Stir to blend well.</li>
+      <li>o assemble the gyoza, place a piece of the gyoza wrapper on your palm or a flat surface. Spoon about 1 teaspoon of the filling onto the center of the wrapper. Dip your index finger into some water and moisten the outer edges of the dumpling wrapper.</li>
+      <li>Fold the gyoza over, press, and seal the left end. Use your thumb and index finger to create pleats and pinch to secure tightly. Repeat the process to form more pleats (start with 3-4 pleats if you're a beginner). A nicely wrapped gyoza should have a crescent shape.</li>
+      <li>Heat the oil in a skillet or stir-fry pan over medium heat. Arrange the gyoza in the pan and cover with a lid. Pan-fry the gyoza until the bottoms turn golden brown and crispy.</li>
+      <li>Add about 1/4 inch of water to the skillet or stir-fry pan and cover with the lid immediately. The water should evaporate after a few minutes. Continue to cook the gyoza for a couple more minutes to crisp up the bottoms. Remove the gyoza from the skillet or stir-fry pan and serve immediately with the gyoza sauce.</li>
     </ol>
   </body>
 </html>
