--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/honey-garlic-salmon.html">Honey Garlic Salmon</a>
+    <ul>
+      <li><a href="./recipes/honey-garlic-salmon.html">Honey Garlic Salmon</a></li>
+      <li><a href="./recipes/gyoza.html">Gyoza</a></li>
+    </ul>
+
   </body>
 </html>
