Complete spring veg recipe and add link to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="./recipes/honey-garlic-salmon.html">Honey Garlic Salmon</a></li>
       <li><a href="./recipes/gyoza.html">Gyoza</a></li>
+      <li><a href="./recipes/roasted-spring-veg.html">Roasted Spring Vegetables</a></li>
     </ul>
 
   </body>
