--- a/recipes/roasted-spring-veg.html
+++ b/recipes/roasted-spring-veg.html
@@ -7,24 +7,34 @@
 
   <body>
     <a href="../index.html">Back</a>
-    <h1></h1>
-    <img src="../img/" alt="">
+    <h1>Roasted Spring Vegetables</h1>
+    <img src="../img/roasted-vegetables.jpg" alt="Vegetables">
 
     <h2>Description</h2>
-    <p></p>
+    <p>This roasted spring vegetables side dish is a happy dish. Colorful spring vegetables of yellow, green, and orange are competing for your attention.</p>
 
-    <p></p>
+    <p>They are all happily mingle together in a very easy recipe, with simple ingredients of butter, garlic, seasoned with salt and black pepper.</p>
 
 
     <h2>Ingredients</h2>
     <ul>
-      <li></li>
+      <li>Asparagus</li>
+      <li>Baby Carrots</li>
+      <li>Yellow Squash</li>
+      <li>Zucchini</li>
+      <li>Salted Butter</li>
+      <li>Garlic</li>
+      <li>Parsley</li>
+      <li>Salt</li>
     </ul>
 
 
     <h2>Steps</h2>
     <ol>
-      <li></li>
+      <li>Preheat oven to 400°F (200°C).</li>
+      <li>Combine the asparagus, carrots, squash, and zucchini. Add the melted butter, garlic, parsley, and salt, and stir to mix well.</li>
+      <li>Ensure that all the spring vegetables are evenly coated with the butter mixture. Arrange them in a single layer on a baking sheet lined with parchment paper.</li>
+      <li>Roast for 12 minutes, then dish out and serve immediately.</li>
     </ol>
   </body>
 </html>
