--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Gyoza Recipe</title>
+    <title>Gyoza</title>
     <meta charset="UTF-8">
   </head>
 
   <body>
     <a href="../index.html">Back</a>
-    <h1>Gyoza Recipe</h1>
+    <h1>Gyoza</h1>
     <img src="../img/gyoza.jpg" alt="Gyoza" width="300">
 
     <h2>Description</h2>
