--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -11,7 +11,7 @@
     <img src="../img/gyoza.jpg" alt="Gyoza" width="300">
 
     <h2>Description</h2>
-    <p>Gyoza is a type of Japanese dumplings, with juicy meat filling inside of dumpling wrappers.Originating from Chinese jiaozi dumplings, they have become a mainstay of Japanese recipes. It’s very popular in and outside of Japan.</p>
+    <p>Gyoza is a type of Japanese dumplings, with juicy meat filling inside of dumpling wrappers.Originating from Chinese jiaozi dumplings, they have become a mainstay of Japanese recipes. It's very popular in and outside of Japan.</p>
 
     <p>In the United States, you can find them at Japanese restaurants and Asian-themed restaurants. They are often served as an appetizer, or part of a combo meal or in a bento box. For an extra burst of umami, consider adding a shoyu egg alongside your gyoza.</p>
 
