--- a/recipes/honey-garlic-salmon.html
+++ b/recipes/honey-garlic-salmon.html
@@ -12,10 +12,10 @@
 
     
     <h2>Description</h2>
-    <p>Just imagine it: perfectly cooked salmon fillets coated in a glossy honey garlic glaze. Every bite is bursting with flavor! The honey and garlic sauce keeps the salmon juicy, moist, and packed with deliciousness—and it’s <strong>healthy</strong>, too!</p>
+    <p>Just imagine it: perfectly cooked salmon fillets coated in a glossy honey garlic glaze. Every bite is bursting with flavor! The honey and garlic sauce keeps the salmon juicy, moist, and packed with deliciousness—and it's <strong>healthy</strong>, too!</p>
 
     <p>
-      This <strong>quick salmon dinner</strong> is one of the fastest meals you can make at home. From prep to plate, it’s done <strong>in just 15 minutes</strong>. It’s proof that you don’t need anything fancy to make amazing food—sometimes, the simplest ingredients create the most incredible meals.
+      This <strong>quick salmon dinner</strong> is one of the fastest meals you can make at home. From prep to plate, it's done <strong>in just 15 minutes</strong>. It's proof that you don't need anything fancy to make amazing food—sometimes, the simplest ingredients create the most incredible meals.
     </p>
 
 
@@ -38,10 +38,10 @@
     <h2>Steps</h2>
     <ol>
       <li>Season the salmon with salt, black pepper and cayenne pepper, then set it aside for now.</li>
-      <li>In a bowl, mix together the honey, water, apple cider vinegar (or lemon juice), and a pinch of salt. Give it a good stir until it’s all combined.</li>
+      <li>In a bowl, mix together the honey, water, apple cider vinegar (or lemon juice), and a pinch of salt. Give it a good stir until it's all combined.</li>
       <li>Grab an oven-safe skillet (cast iron is perfect!) and heat it up on high. Add some olive oil, then put the salmon in, skin side down, and let it cook for about a minute. Flip it over, cook the other side for another minute, then flip it back so the skin side is down again.</li>
-      <li>Toss some garlic into the pan and let it sauté until it’s just starting to brown. Pour in the honey mixture and add some lemon wedges, then let the sauce simmer down until it’s sticky and glossy.</li>
-      <li>If you want a little extra char, stick the skillet under the broiler for about a minute—that’s totally optional.</li>
+      <li>Toss some garlic into the pan and let it sauté until it's just starting to brown. Pour in the honey mixture and add some lemon wedges, then let the sauce simmer down until it's sticky and glossy.</li>
+      <li>If you want a little extra char, stick the skillet under the broiler for about a minute—that's totally optional.</li>
       <li>Finish it off with a sprinkle of parsley on top and serve it up right away. So good!</li>
     </ol>
   </body>
