--- a/recipes/roasted-spring-veg.html
+++ b/recipes/roasted-spring-veg.html
@@ -11,9 +11,9 @@
     <img src="../img/roasted-vegetables.jpg" alt="Vegetables">
 
     <h2>Description</h2>
-    <p>This roasted spring vegetables side dish is a happy dish. Colorful spring vegetables of yellow, green, and orange are competing for your attention.</p>
+    <p>This roasted spring vegetables side dish is a happy dish. <strong>Colorful spring vegetables</strong> of yellow, green, and orange are competing for your attention.</p>
 
-    <p>They are all happily mingle together in a very easy recipe, with simple ingredients of butter, garlic, seasoned with salt and black pepper.</p>
+    <p>They are all happily mingle together in a very easy recipe, with simple ingredients of <strong>butter</strong>,<strong> garlic</strong>, seasoned with <strong>salt and black pepper</strong>.</p>
 
 
     <h2>Ingredients</h2>
@@ -31,10 +31,10 @@
 
     <h2>Steps</h2>
     <ol>
-      <li>Preheat oven to 400°F (200°C).</li>
-      <li>Combine the asparagus, carrots, squash, and zucchini. Add the melted butter, garlic, parsley, and salt, and stir to mix well.</li>
-      <li>Ensure that all the spring vegetables are evenly coated with the butter mixture. Arrange them in a single layer on a baking sheet lined with parchment paper.</li>
-      <li>Roast for 12 minutes, then dish out and serve immediately.</li>
+      <li>Preheat oven to <strong>400°F (200°C)</strong>.</li>
+      <li>Combine the <strong>asparagus, carrots, squash, and zucchini</strong>. Add the <strong>melted butter, garlic, parsley, and salt</strong>, and stir to mix well.</li>
+      <li>Ensure that all the spring vegetables are <strong>evenly coated</strong> with the butter mixture. Arrange them in a single layer on a baking sheet lined with parchment paper.</li>
+      <li>Roast for <strong>12 minutes</strong>, then dish out and serve <strong>immediately</strong>.</li>
     </ol>
   </body>
 </html>
